--- a/Property FW and wreath products/Median.tex
+++ b/Property FW and wreath products/Median.tex
@@ -1,19 +1,19 @@
 %!TEX root = Property_FW_and_wreath_products.tex
 \label{Section:Median}
-In this section, we will investigate the property FW via the action of groups on median graphs.
-%After recalling the definition of median graphs, we will prove some results 
+In this section, we will investigate property FW via the action of groups on median graphs.
+In order to ease readability, we will always assume our connected graphs to be non-empty.\footnote{This is coherent with the definition that a connected graph is a graph with exactly one connected component.}
 
 For $u$ and $v$ two vertices of a connected graph $\mathcal G$, we define the total interval $[u,v]$ as the set of vertices that lies on some shortest path between $u$ and $v$.
 A connected graph $\mathcal G$ is \emph{median} if for any three vertices $u$, $v$, $w$, the intersection $[u,v]\cap[v,w]\cap[u,w]$ consists of a unique vertex, denoted $m(u,v,w)$.
-%A graph is median if each of its connected components is median.
+A graph is \emph{median} if each of its connected components is median.
 
-Recall that a group $G$ has property FW if and only if every $G$ action on a connected median graph has bounded orbits.\todo{This is not equivalent to have uniformly bounded orbits. Need to check everything.}
+Recall that a group $G$ has property FW if and only if every $G$ action on a connected median graph has bounded orbits.\footnote{On the other hand, a group $G$ is finite, if and only if every $G$ action on a connected median graph has \emph{uniformly} bounded orbits. See Example~\ref{Ex:MainMedian} and the discussion below it.}
 
-We now prove a series of results that will be generalized to a broader context in Section~\ref{Section:Generalizations}.
-The following easy result is folklore, and we provide a proof only for the sake of completeness.
+We begin this section by proving a series of results that will be generalized to a broader context in Section~\ref{Section:Generalizations}.
+The following easy result is folklore, and we provide a proof of it only for the sake of completeness.
 \begin{lem}\label{Lemma:Subgroup}
 Let $G$ be a group and $H$ be a finite index subgroup.
-If $H$ has FW, then so does~$G$.
+If $H$ has property FW, then so does~$G$.
 \end{lem}
 \begin{proof}
 Suppose that $G$ does not have FW and let $X$ be a connected median graph on which $G$ acts with an unbounded orbit $\orbite$.
@@ -25,9 +25,9 @@ We also have the following lemma on semi-direct products:
 Let $G=N\rtimes H$ be a semidirect product. Then
 \begin{enumerate}
 \item
-If $G$ has FW, then so does $H$.
+If $G$ has property FW, then so does $H$.
 \item
-If both $N$ and $H$ have FW, then $G$ also has FW.
+If both $N$ and $H$ have property FW, then $G$ also has property FW.
 \end{enumerate}
 \end{lem}
 \begin{proof}
@@ -39,17 +39,17 @@ On the other hand, suppose that $N$ and $H$ have FW and let $X$ be a non-empty c
 Then both $N$ and $H$ acts on $X$ with bounded orbits.
 Let $x$ be an element of $X$, $d_1$ the diameter of $H.x$ and $d_2$ the diameter of $N.x$.
 Since $G$ acts by isometries, for every $h$ in $H$ the set $N.(h.x)=Nh.x=hN.x=h.(N.x)$ has also diameter $d_2$.
-Therefore, every element of $G.x=NH.x$ is at distance at most $d_1+d_2$ of $x$, which implies that the orbit $G.x$ is bounded with diameter at most $2(d_1+d_2)$.
+Therefore, every element of $G.x=NH.x$ is at distance at most $d_1+d_2$ of $x$, which implies that the orbit $G.x$ is bounded, with diameter at most $2(d_1+d_2)$.
 \end{proof}
-Multiple applications of the above Lemma give us
+Multiple applications of Lemma~\ref{Lemma:Semidirect} give us
 \begin{cor}\label{Cor:Wreath}
 Let $G\wr_X H$ be the wreath product of $G$ and $H\curvearrowright X$.
 Then
 \begin{enumerate}
 \item
-If $G\wr_X H$ has FW, then so does $H$.
+If $G\wr_X H$ has property FW, then so does $H$.
 \item
-If $X$ is finite and both $G$ and $H$ have FW, then $G\wr_X H$ has FW.
+If $X$ is finite and both $G$ and $H$ have property FW, then $G\wr_X H$ has property FW.
 \end{enumerate}
 \end{cor}
 
@@ -59,14 +59,14 @@ If $X$ is finite and both $G$ and $H$ have FW, then $G\wr_X H$ has FW.
 
 
 
-We now turn back our attention on results that will rely more on the median structure.
+We now turn our attention on results that will rely more on the median structure.
 
-Trees are the simplest examples of median graphs and a simple verification shows that if $\mathcal G$ and $\mathcal H$ are both (connected) median graphs, then their cartesian product is also a (connected) median graph.
+Trees are the simplest examples of median graphs and a simple verification shows that if $X$ and $Y$ are both (connected) median graphs, then their cartesian product is also a (connected) median graph.
 On the other hand, the following example will be fundamental for us.
 %
 %
 \begin{exmp}\label{Ex:MainMedian}
-Let $X$ be a set and let  $\powerset{X}=2^X$ be the set of all subsets of $X$.
+Let $X$ be a set and let  $\powerset{X}=2^X$ be the set of all subsets of~$X$.
 Define a graph structure on $\powerset{X}$ by putting an edge between $E$ and $F$ if and only if $\#(E\Delta F)=1$, where $\Delta$ is the symmetric difference.
 Therefore, the distance between two subsets $E$ and $F$ is $E\Delta F$ and
 the connected component of $E$ is the set of all subsets $F$ with $E\Delta F$ finite.
@@ -78,13 +78,15 @@ In particular, $\powerset{X}$ is a median graph, with $m(D,E,F)$ being the set o
 We denote by $\powersetf{X}$, respectively $\powersetcof{X}$ the set of all finite, respectively cofinite, subsets of $X$.
 They are connected components of $\powerset{X}$, which coincide if and only if $X$ is finite
 
-The connected components of $\powerset{X}$ are exactly the hypercubes and it turns out that every connected median graph is a retract of some $\powersetf{X}$, see \cite{Bandelt1984}.
+More generally, the connected components of $\powerset{X}$ are exactly the hypercubes and it turns out that every connected median graph is a retract of some $\powersetf{X}$, see \cite{Bandelt1984}.
 
 These graphs will be fundamental for us due to the following fact.
 Any action of a group $G$ on a set $X$ naturally extends to an action of $G$ on $\powerset{X}$ by graph homomorphisms: $g.\{x_1,\dots,x_n\}=\{g.x_1,\dots,g.x_n\}$.
 Be careful that the action of $G$ on $\powerset{X}$ may exchange the connected components.
-In fact, the connected component of $E\subset X$ is stabilized by $G$ if and only if $E$ is \emph{commensurated} by $G$, that is if for every $g\in G$ the set $E\Delta gE$ is finite.
-For example, $\powersetf{X}$ and $\powersetcof{X}$ are always preserved by the $G$-action.
+In fact, the connected component of $E\subset X$ is stabilized by $G$ if and only if $E$ is \emph{commensurated} by~$G$, that is if for every $g\in G$ the set $E\Delta gE$ is finite.
+For example, both $\powersetf{X}$ and $\powersetcof{X}$ are always preserved by the $G$-action.
+
+If $G$ is an infinite group, then the action of $G$ on itself by left multiplication extends to an action of $G$ on the connected median graphs $\powersetf{G}$ with bounded but not uniformly-bounded orbits. Indeed, given distinct $g_1$ to $g_n$ in $G$, there exists $g$ such that $g.\{g_1,\dots,g_n\}$ does not intersect $\{g_1,\dots,g_n\}$ and is therefore at distance $2n$ of it.
 
 Building on Example~\ref{Ex:MainMedian}, we obtain that no infinite sum of groups has the property FW.
 \begin{lem}\label{Lemma:Sum}
@@ -100,24 +102,43 @@ Since every element of $G$ has only a finite number of non-trivial coordinates, 
 
 Since $I$ is infinite, it contains an infinite countable subset $I_c=\{i_1,i_2,\dots\}$.
 For every $j\in \N$, choose a non-trivial $g_j\in G_{i_j}$.
-Then the orbit of the vertex $\mathbf 1$ contains the point $\{g_1,\dots, g_n\}\cup\bigcup_{i\notin\{i_1,\dots,i_n\}} 1_{G_{i}}$ which is at distance $2n$ of $\mathbf 1$.
-That is the action of $G$ on $\powerset{X}$ has an unbounded orbit.
+Then the orbit of the vertex $\mathbf 1$ contains the point $\{g_1,\dots, g_n\}\cup\bigcup_{i\notin\{i_1,\dots,i_n\}} 1_{G_{i}}$ which is at distance $2n$ of~$\mathbf 1$.
+That is the action of $G$ on the connected component of~$\mathbf 1$ has an unbounded orbit.
+%
+%
+%
+%Let $I$ be an infinite set of indices, $(G_i)_{i\in I}$ be non-trivial groups and $G=\bigoplus_{i\in I} G_i$.
+%%We can always suppose that $I$ is countable.
+%Since $I$ is infinite, there exists a countable infinite subset $J\cong\{1,2,\dots\}$ of $I$ and we have $G=\bigoplus_{j\geq 1} G_j\oplus\bigoplus_{i\in I\setminus J} G_i$.
+%Let $X\coloneqq\bigsqcup_{j\geq 1} G_i$.
+%There is a natural action of $G=\bigoplus_{j\geq 1} G_j$ on $X$: the subgroup $G_j$ acts by left multiplication on $G_j$ and trivially on $G_k$ for $k\neq j$. This action naturally extends to an action of $G$, where $\bigoplus_{i\in I\setminus J} G_i$ acts trivially.
+%
+%Therefore, we have an action of $G$ on the median graph $\powerset{X}$.
+%Let $\mathbf 1\coloneqq\bigcup_{j\geq 1} 1_{G_1}$ be the subset of $X$ consisting of the identity elements of all the $G_j$ with $j\in J$.
+%Since every element of $G$ has only a finite number of non-trivial coordinates, the action of $G$ preserves the connected components of $\mathbf 1$ (and in fact every connected component of $\powerset{X}$).
+%
+%%Since $I$ is infinite, it contains an infinite countable subset $I_c=\{i_1,i_2,\dots\}$.
+%For every $j\in \N$, choose a non-trivial $g_j\in G_{j}$.
+%Then the orbit of the vertex $\mathbf 1$ contains the point $\{g_1,\dots, g_n\}\cup\bigcup_{i\notin\{i_1,\dots,i_n\}} 1_{G_{i}}$ which is at distance $2n$ of $\mathbf 1$.
+%That is the action of $G$ on $\powerset{X}$ has an unbounded orbit.
 \end{proof}
 
 As a direct corollary of Lemmas \ref{Lemma:Sum} and \ref{Lemma:Semidirect}, we obtain
 \begin{cor}\label{Cor:Sum}
-The group $\otimes_X G$ has FW if and only if $X$ is finite and $G$ has FW.
+Let $G$ be a non-trivial group.
+The group $\otimes_X G$ has property FW if and only if $X$ is finite and $G$ has property FW.
 \end{cor}
 
 
 We also have a converse of Lemma~\ref{Lemma:Subgroup}.
 \begin{lem}\label{Lemma:Subgroup2}
 Let $G$ be a group and $H$ be a finite index subgroup.
-If $G$ has FW, then so does~$H$.
+If $G$ has property FW, then so does~$H$.
 \end{lem}
 \begin{proof}
 Suppose that $H$ does not have FW and let $\alpha\colon H\curvearrowright X$ be an action of $H$ on a connected median space such that there is an unbounded orbit $\orbite$.
-Similarly to the classical theory of representation of finite groups, we have the induced  action $\Ind_H^G(\alpha)\colon G \curvearrowright X^{G/H}$ on the graph $X^{G/H}$. Since $H$ has finite index, the graph $X^{G/H}$ is median. On the other hand, the subgroup $H\leq G$ acts diagonaly on $X^{G/H}$, which gives us a $H$-equivariant isometric embedding from $H\curvearrowright X$ to $H\curvearrowright X^{G/H}$ sending $\orbite$ to an unbounded $H$-orbit on $X^{G/H}$, which implies that $G$ does not have FW.
+Similarly to the classical theory of representation of finite groups, we have the induced  action $\Ind_H^G(\alpha)\colon G \curvearrowright X^{G/H}$ on the connected graph $X^{G/H}$. Since $H$ has finite index, the graph $X^{G/H}$ is median. On the other hand, the subgroup $H\leq G$ acts diagonaly on $X^{G/H}$, which gives us a $H$-equivariant isometric embedding from $H\curvearrowright X$ to $H\curvearrowright X^{G/H}$.
+This embedding sends $\orbite$ to an unbounded $H$-orbit on $X^{G/H}$, which implies that $G$ does not have FW.
 
 For readers that are not familiar with representations of finite groups, here is the above argument in more details.
 Let $(f_i)_{i=1}^n$ be a transversal for $G/H$.
@@ -133,14 +154,14 @@ In particular, this $G$ action has an unbounded orbit.
 
 
 
-We finally characterize which wreath products do have FW, and hence provide a proof of Theorem~\ref{Thm:Main}.
+We finally characterize which wreath products do have property FW, and hence provide a proof of Theorem~\ref{Thm:Main}.
 \begin{prop}\label{Prop:Median}
-Let $G$, $H$ be two discrete groups with $G$ non-trivial and $X$ a set on which $H$ acts. The wreath product $G \wr_X H$ has the property FW if and only if $G$ and $H$ have the property FW and $X$ is finite.
+Let $G$, $H$ be two discrete groups with $G$ non-trivial and $X$ a set on which $H$ acts. The wreath product $G \wr_X H$ has property FW if and only if $G$ and $H$ have property FW and $X$ is finite.
 \end{prop}
 \begin{proof}
 In view of Corollary~\ref{Cor:Wreath} it remains to show that if $G\wr_X H$ has FW, then $G$ has FW and $X$ is finite.
 
-First, suppose that $G$ does not have FW and let $Y$ be a connected median graph on which $G$ acts with an unbounded orbit $G.y$.
+Firstly, suppose that $G$ does not have FW and let $Y$ be a connected median graph on which $G$ acts with an unbounded orbit $G.y$.
 Then $G\wr_X H$ acts on the connected median graph $Y\times \powersetf{X}$ by
 \[
 	\bigl(\phi,h\bigr).(y,E)=
@@ -149,13 +170,20 @@ Then $G\wr_X H$ acts on the connected median graph $Y\times \powersetf{X}$ by
 	(y,h.E)&\textnormal{if $E$ is not a singleton.}
 	\end{cases}
 \]
-But then the orbit of $(y,\{x\})$ is unbounded for every $x\in X$, which implies that $G\wr_X H$ does not have FW.
-Indeed, this orbit contains
+Since $\{g.y\}_{g\in G}$ is unbounded, so is $\{g.y,\{x\}\}_{g\in G}$.
+In particular, the orbit of $(y,\{x\})$, which contains
 \[
 	\{(\delta_{x}^g,1).(y,\{x\})=(g.y,\{x\})\,|\,g\in G\},
 \]
-where $\delta_{x}^g(x)=g$ and $\delta_{x}^g(z)=1$ if $z\neq x$.
-Since $\{g.y\}_{g\in G}$ is unbounded, so is $\{g.y,\{x\}\}_{g\in G}$.
+is unbounded and $G\wr_X H$ does not have FW.
+%
+%The orbit of $(y,\{x\})$ is unbounded for every $x\in X$, which implies that $G\wr_X H$ does not have FW.
+%Indeed, this orbit contains
+%\[
+%	\{(\delta_{x}^g,1).(y,\{x\})=(g.y,\{x\})\,|\,g\in G\},
+%\]
+%where $\delta_{x}^g(x)=g$ and $\delta_{x}^g(z)=1$ if $z\neq x$.
+%Since $\{g.y\}_{g\in G}$ is unbounded, so is $\{g.y,\{x\}\}_{g\in G}$.
 
 Finally, suppose that $X$ is infinite.
 As in Lemma~\ref{Lemma:Sum}, the group $\bigoplus_XG$ acts coordinatewise on  $\bigsqcup_XG$. On the other hand, $H$ acts on $\bigsqcup_XG$ by permutation of the factors.
@@ -165,7 +193,7 @@ As in Lemma~\ref{Lemma:Sum} we have that the action of $G\wr_XH$ on $\powerset{\
 and that the orbit of $\mathbf 1$ is unbounded.
 \end{proof}
 
-\begin{rem}
+\begin{rem}\label{Rem:Actions}
 A reader familiar with wreath products might have recognize that we used both the classical primitive and imprimitive actions of it in the proof of Proposition~\ref{Prop:Median}.
 
 On one hand, since $H$ acts on $X$, it acts on $\powersetf{X}$.
@@ -182,7 +210,12 @@ This subset is $G\wr_{X} H$ invariant, which gives us the desired action of $G\w
 
 
 \section{Related concepts and generalizations}\label{Section:Generalizations}
-This short section is devoted to generalize some of the results of Section~\ref{Section:Median}, as well as to present some properties related to the FW property. Indeed, property FW does not stand alone and there are other similar properties that are of great interest.
+%This short section is devoted to generalize some of the results of Section~\ref{Section:Median}, as well as to present some properties related to property FW. Indeed, property FW does not stand alone and there are other similar properties that are of great interest, see Definition~\ref{Def:FHFA}.
+
+The aim of this section is to give a glimpse of some properties related to the FW property as well as to provide a general framework to study them.
+We will sometimes only sketch the arguments and let the reader verify all the details for its favorite property.
+
+Property FW is not isolated in the realm of group properties and other similar properties of great interest can also be defined in terms of action with bounded orbits.
 \begin{defn}\label{Def:FHFA}
 Let $G$ be a group.
 It is said to have \emph{property SB} if any action on a metric space has bounded orbits.
@@ -191,7 +224,7 @@ Finally, $G$ is said to have (cofinality $\neq\omega$) if any action on an ultra
 \end{defn}
 For countable groups (and more generally for $\sigma$-compact locally compact groups), property FH is equivalent to the celebrated Kazdhan's property (T) by the Delorme-Guichardet theorem, see for example \cite{MR2415834}, but this is not true in general \cite{MR2240370}.
 \todo[inline]{Maybe expand a little more.}
-The names FH, FW and FA come from the fact that this property admit a description in terms of existence of a Fixed point for action on Hilbert spaces, on spaces with Walls and on trees (\emph{Arbres} in french).
+The names\todo{Give refs} FH, FW and FA come from the fact that these properties admit a description in terms of existence of a Fixed point for actions on Hilbert spaces, on spaces with Walls and on trees (\emph{Arbres} in french).
 On the other hand, SB stands for Strongly Bounded and is sometimes called the Bergman property, while a group has cofinality $\neq\omega$ if and only if it cannot be written has an increasing union of proper subgroups.
 
 We have the following strict implications \cite{MR1432323,MR0476875 ,MR3299841,2013arXiv1302.5982C}
@@ -202,21 +235,97 @@ We have the following strict implications \cite{MR1432323,MR0476875 ,MR3299841,2
 It is possible to define other properties in the spirit of Definition~\ref{Def:FHFA}.
 Let P be a property of metric spaces (for example \emph{be a connected median graph}) and BP be the group property: \emph{Every $G$-action on a space with P has bounded orbits}, where a $G$-action is supposed to ``preserve the P-structure''.
 Lemmas \ref{Lemma:Subgroup} and \ref{Lemma:Semidirect} and Corollary \ref{Cor:Wreath} as well as their proofs remain true for groups with property BP.
-Moreover, Lemma~\ref{Lemma:Sum}, Corollary~\ref{Cor:Sum}, as well as the part of Proposition~\ref{Prop:Median} saying that $G\wr_XH$ does not have $BP$ if $X$ is infinite, hold for properties that are stronger than property FW. 
+%Moreover, Lemma~\ref{Lemma:Sum}, Corollary~\ref{Cor:Sum}, as well as the part of Proposition~\ref{Prop:Median} saying that $G\wr_XH$ does not have $BP$ if $X$ is infinite, hold for properties that are stronger than property FW. 
 
 On the other hand, the other results of Section~\ref{Section:Median} require a specific construction and do not generalize straightforward to groups with property BP.
-Nevertheless, it is possible to extract the main ingredients of the proof and to adapt them to some specific cases.
+Nevertheless, it is possible to extract the main ingredients of the proofs given in Section~\ref{Section:Median} and to adapt them to some specific cases.
 We will now give a raw outline of this process, but let the details to the interested reader.
 
 In order to generalize Example~\ref{Ex:MainMedian}, we will need to construct from a $G$ action on a set $X$ a $G$ action on a P-space $F(X)$,
 such that $X$ embeds $G$-equivariently into $F(X)$.
 %This will usually be done via a functor $F$ from the category of $G$-spaces to the category of $G$-$P$-spaces.
 %More precisely, we say that it is \emph{possible to extend $G$ actions to P-spaces} if there is a $G$-equivariant map $i$ that associate to every $G$-set $X$ a P-space $Y$ endowed with a $G$ action and a $G$-equivariant map $\iota\colon X\hookrightarrow Y$.
-For median graphs we took $F(X)=\powerset{X}$ in Example~\ref{Ex:MainMedian}, and then carefully choose some connected component of it, while for real Hilbert spaces it is possible to take $F(X)$ to be the real Hilbert space generated by $X$. That is, 
+For median graphs we took $F(X)=\powerset{X}$ in Example~\ref{Ex:MainMedian}, and then carefully choose some connected component of it.
+For real Hilbert spaces it is possible to take $F(X)$ to be the real Hilbert space generated by $X$. That is, 
 \[F(X)=\ell^2(X)=\bigg\{f\colon X\to \mathbf R\,\bigg|\, \sum_{x\in X}f(x)^2<\infty\bigg\},\]
 where $G$ acts by permutation.
 For property SB\todo{Rewrite ?}, we can take $F(X)$ to be  $\powerset{X}$ or $\ell^2(X)$, as well as many other possibilities.
-In the context of trees, is is possible to take $F(X)=X\sqcup\{*\}$ with for every $x\in X$ an edge between $x$ and $*$ (the action of $G$ fixing $*$), while for ultrametric spaces it is always possible to take $F(X)=X$ with the discrete metric, however these last two examples will not be useful in practice.
+In the context of trees see Example~\ref{Expl:Forest} for a construction that works for some $X$.
+Finally, for ultrametric spaces it is always possible to take $F(X)=X$ with the discrete metric, however this will not be useful in practice as any action on it has bounded orbits.
+
+We will prove the analogous of Lemma~\ref{Lemma:Sum} and Corollary~\ref{Cor:Sum} for property FA.
+In order to do that we will rely on the following example.
+\begin{exmp}\label{Expl:Forest}
+Let $(G_i)_{i\geq 1}$ be non-trivial groups and $\varepsilon$ denotes an element not in any of the $G_i$.
+Define $Y=Y((G_i)_{i\geq 1})\coloneqq\{f=(f_1,f_2,\dots)\ |\ f_i\in G_i\sqcup\{\varepsilon\}\}$.
+We say that a sequence $f$ in $Y$ has level $n$ if $f_n\neq\varepsilon$ while $f_i=\varepsilon$ for $i<n$, if no such $n$ exists (that is if $f$ is the constant sequence $\varepsilon$) we say that $f$ has level infinity.
+We put an edge between $f$ and $g$ in $Y$ if one of them is of level $n$ and the other of level $n+1$ and $f_i=g_i$ for $i>n$.
+If $f\in Y$ has level $n$, then it has exactly one neighbourhood of level $n+1$, which implies that $Y$ is a forest.
+The group $G\coloneqq\bigoplus_{i\geq 1}G_i$ acts on $Y$ by $(g_1,g_2,\dots).(f_1,f_2,\dots)=(g_1f_1,g_2f_2,\dots)$ with the convention that $G_i.\varepsilon=\varepsilon$ for any $i$.
+It is trivial that this action preserves the graph structure on $Y$.
+\end{exmp}
+
+\begin{lem}\label{lem:SumFA}
+An infinite direct sum of non-trivial groups does not have property~FA.
+
+As a consequence, if  $G$ is a non-trivial group, then 
+the group $\otimes_X G$ has property FA if and only if $X$ is finite and $G$ has property FA.
+\end{lem}
+\begin{proof}
+The first assertion implies the second assertion since the analogous of Lemma~\ref{Lemma:Semidirect} holds for property FA.
+Moreover, as in the proof of Lemma~\ref{Lemma:Sum} it is enough to prove the first assertion for a countable numbers of groups.
+
+Let $G=\bigoplus_{i\geq 1} G_i$ be a direct sum of non-trivial groups and let $Y=Y((G_i)_{i\geq 1})$ as in Example~\ref{Expl:Forest}.
+Let $\mathbf 1\coloneqq(1_{G_1},1_{G_2},\dots)$ be the sequence consisting of the identity elements of all the $G_i$.
+Since every element of $G$ has only a finite number of non-trivial coordinates, the action of $G$ preserves the connected components of $\mathbf 1$ (and in fact every connected component of $Y$).
+
+For every $i\in \N$, choose a non-trivial $g_i\in G_i$.
+Then for every $n$, the orbit of the vertex $\mathbf 1$ contains the point $\{g_1,\dots, g_n,1_{G_{n+1}},\dots\}$ which is at distance $2n$ of~$\mathbf 1$.
+That is the action of $G$ on the connected component of $\mathbf 1$ has an unbounded orbit.
+\end{proof}
+We also obtain the following ``meta-proposition''
+\begin{prop}\label{Prop:Tree}
+Let $P$ be a property of spaces such that property BP implies property BA.
+Let $G\wr_X H$ be the wreath product of $G$ and $H\curvearrowright X$ with $G$ non-trivial.
+Then
+\begin{enumerate}
+\item
+If $G\wr_X H$ has property BP, then $H$ has property BP and $X$ is finite.
+\item
+If $X$ is finite and both $G$ and $H$ have property BP, then $G\wr_X H$ has property~BP.
+\end{enumerate}
+\end{prop}
+\begin{proof}
+The second assertion and half of the first assertion are Corollary~\ref{Cor:Wreath} which holds for any property P.
+
+It remains to show that if $G\wr_X H$ has property BP then $X$ is finite. Which is equivalent to prove that for infinite $X$ the group $G\wr_X H$ does not have FA.
+The proof is similar to the proof of the second part of Proposition \ref{Prop:Median} and rely on the fact that $G\wr_X H$ acts on $Y=(G_{x\in X})$.
+The action of $\bigoplus_{x\in X}G$ is as in Lemma~\ref{lem:SumFA}, while $H$ acts by permutation.
+\end{proof}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 In order to generalize Lemma~\ref{Lemma:Subgroup2}, we only need that a product of two P-spaces is still a P-space.
 %More precisely, given two actions $G_i\curvearrowright P_i$, $i=1,2$, of groups on P-spaces we would like to have a natural action of $G_1\times G_2$ on some P-space $P_3$ containing $G_.
@@ -240,21 +349,43 @@ In particular, if $G\curvearrowright \mathcal H$ has an unbounded orbit, so does
 
 We hence recover\todo{Check si on peut enlever discret, + mettre réfs.}
 \begin{prop}
-Let $G$, $H$ be two discrete groups with $G$ non-trivial and $X$ a set on which $H$ acts. The wreath product $G \wr_X H$ has the property FH if and only if $G$ and $H$ have the property FH and $X$ is finite
+Let $G$, $H$ be two discrete groups with $G$ non-trivial and $X$ a set on which $H$ acts. The wreath product $G \wr_X H$ has the property FH if and only if $G$ and $H$ have the property FH and $X$ is finite.
 \end{prop}
-\todo[inline]{Regarder si on peut enlever groupe discret et ne pas passer par le résultat pour (T)}
+%\todo[inline]{Regarder si on peut enlever groupe discret et ne pas passer par le résultat pour (T)}
 %The proof is a direct application of the equivalence of the properties (FH) and (T) for discrete groups (see \cite{Bekka2008}) and of the Theorem \ref{T:Wreath_prop_T} .
 %
-It also follows from the above discussion that we have
+It also follows from the above discussion that we also have
 \begin{prop}
-Let $G$, $H$ be two discrete groups with $G$ non-trivial and $X$ a set on which $H$ acts. The wreath product $G \wr_X H$ has the property SB if and only if $G$ and $H$ have the property SB and $X$ is finite
+Let $G$, $H$ be two discrete groups with $G$ non-trivial and $X$ a set on which $H$ acts. The wreath product $G \wr_X H$ has the property SB if and only if $G$ and $H$ have the property SB and $X$ is finite.
 \end{prop}
 %
 %
-Finally, we mention the following result on property FA that was obtained by Cornulier and Kar
+We also have the following partial result for groups with the Bergmann property
+\begin{prop}\label{Prop:Cof}
+Let $G\wr_X H$ be the wreath product of $G$ and $H\curvearrowright X$.
+Then
+\begin{enumerate}
+\item
+If $G\wr_X H$ has cofinality $\neq\omega$, then so do $G$ and $H$.
+\item
+If $X$ is finite and both $G$ and $H$ have cofinality $\neq\omega$, then $G\wr_X H$ has cofinality $\neq\omega$.
+\end{enumerate}
+\end{prop}
+\begin{proof}
+Once again, Corollary~\ref{Cor:Wreath} applies.
+It thus remains to show that if $G\wr_X H$ has cofinality $\neq\omega$, then so does $G$.
+Let $(Y,d_y)$ be an ultrametric space on which $G$ acts with an unbounded orbit $G.y_0$.
+If we endow $X$ with the discrete metric $d_X$, the function $d_\infty((y,x),(y',x'))=\max\{d_Y(y,y'),d_X(x,x')\}$ is an ultra-metric on $Y\times X$ and the group $G\wr_X H$ acts isometrically on $(Y\times X,d_\infty)$.
+Finally, for any $x\in X$ the orbit of $(y_0,x)$ is unbounded.
+\end{proof}
+
+
+
+Finally, we mention the following result on property FA that was obtained by Cornulier and Kar and which strengthen Proposition~\ref{Prop:Tree}.
+Observe that, by the characterization of Serre~\cite{MR0476875}, a finitely generated group with property FA is a group with a finite abelianization, which cannot be expressed as an union of proper increasing sequence of subgroups 
 \begin{thm}[\cite{Cornulier2011}]
 Let $G$, $H$ be two discrete groups with $G$ non-trivial and $X$ a set on which $H$ acts with a finite number of orbits and no fixed point. Then the wreath product $G \wr_X H$ has the property FA if and only if $H$ has the property FA and if $G$ is a group with a finite abelianization, which cannot be expressed as an union of proper increasing sequence of subgroups.
 \end{thm}
-\todo[inline]{regarder si c'est plus fort que $H$ possède la propriété (FA) et le lien avec le cardinal de $X$}
+%\todo[inline]{regarder si c'est plus fort que $H$ possède la propriété (FA) et le lien avec le cardinal de $X$}
 
 \todo[inline]{Regarder le cas PW, Haagerup,... i.e. action propre. Rappel: une action isométrique de $G$ est propre si pour tout $x$ (de manière équivalente il existe $x$), pour tout $r\in \mathbf R$ l'ensemble $\{g\in G\,|\,d(x,g.x)\}$ est fini.}
